# cognitor-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml
cognitor/: __init__.py  client.py  exceptions.py  models.py
