[build-system]
requires = ["setuptools>=61", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognitor"
dynamic = ["version"]
description = "Python client for the Cognitor search platform API."
authors = [
    { name = "Riccardo Lucato", email = "riccardo@tanaos.com" }
]
license = { file = "LICENSE.md" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "httpx>=0.27.0",
    "setuptools>=82.0.1",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/tanaos/cognitor-python"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
cognitor = ["py.typed"]

[tool.setuptools_scm]
version_file = "cognitor/__version__.py"
